force-app/main/default/objects/Sales_Data__c/Sales_Data__c.object-meta.xml
<CustomObject>
    <description>Data from legacy system which displays weekly fiscal information.</description>
    <label>Sales Data</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Sales Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>