force-app/main/default/objects/Sales_Data__c/fields/Commission_GTM__c.field-meta.xml
<CustomField>
    <fullName>Commission_GTM__c</fullName>
    <label>Commission GTM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>