force-app/main/default/objects/Sales_Data__c/fields/Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Month__c</fullName>
    <label>Fiscal Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>