force-app/main/default/objects/Sales_Data__c/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <formula>IF(AND(VALUE(MID( FW_END_DATE__c , 5, 2)) &gt;=1 , VALUE(MID( FW_END_DATE__c , 5, 2)) &lt;=3),&quot;Q1&quot;, IF(AND(VALUE(MID( FW_END_DATE__c , 5, 2)) &gt;=4 , VALUE(MID( FW_END_DATE__c , 5, 2)) &lt;=6),&quot;Q2&quot;, IF( AND(VALUE(MID( FW_END_DATE__c , 5, 2)) &gt;=7 , VALUE(MID( FW_END_DATE__c , 5, 2))&lt;=9),&quot;Q3&quot;,&quot;Q4&quot;))) &amp;  Fiscal_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>