force-app/main/default/objects/Sales_Data__c/fields/FW_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>FW_END_DATE__c</fullName>
    <label>FW_END_DATE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>