force-app/main/default/objects/Sales_Data__c/fields/Legacy_Sales_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sales_Data_Id__c</fullName>
    <description>This is a combination of Customer Id , Fiscal year and Fiscal week.</description>
    <externalId>true</externalId>
    <label>Legacy Sales Data Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>