force-app/main/default/objects/Sales_Data__c/fields/prior_period_commish_GTM__c.field-meta.xml
<CustomField>
    <fullName>prior_period_commish_GTM__c</fullName>
    <description>sum(fsa.commissionable_gtm)
the prior period&apos;s information, for example if the week was 2007 week 42 the prior period would be 2006 week 42</description>
    <label>Prior Period CGM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>