force-app/main/default/objects/Sales_Data__c/fields/Prior_Period_Distinct_Orders__c.field-meta.xml
<CustomField>
    <fullName>Prior_Period_Distinct_Orders__c</fullName>
    <description>count of distinct fsa.invoice_no || legacy_division_Id
the prior period&apos;s information, for example if the week was 2007 week 42 the prior period would be 2006 week 42</description>
    <label>Prior Period Distinct Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>