force-app/main/default/objects/Sales_Data__c/fields/Prior_Persod_Sales__c.field-meta.xml
<CustomField>
    <fullName>Prior_Persod_Sales__c</fullName>
    <description>sum(fsa_sales)
the prior period&apos;s information, for example if the week was 2007 week 42 the prior period would be 2006 week 42</description>
    <label>Prior Period Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>