force-app/main/default/objects/Sales_Data__c/fields/Rolling_12_Mth_GTM__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Mth_GTM__c</fullName>
    <label>Rolling 12 Mth GTM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>