force-app/main/default/objects/Sales_Data__c/fields/this_month__c.field-meta.xml
<CustomField>
    <fullName>this_month__c</fullName>
    <description>This field is for reporting purpose. Do not delete.</description>
    <formula>DATE(VALUE(MID(FW_END_DATE__c ,1,4)),VALUE(MID(FW_END_DATE__c ,5,2)),VALUE(MID(FW_END_DATE__c ,7,2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Week End Date</label>
    <type>Date</type>
</CustomField>