force-app/main/default/objects/Sales_Data__c/listViews/Sales_Data.listView-meta.xml
<ListView>
    <fullName>Sales_Data</fullName>
    <columns>Sales__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Commission_GTM__c</columns>
    <columns>Fiscal_Month__c</columns>
    <columns>Fiscal_Quarter__c</columns>
    <columns>Fiscal_Week__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Legacy_Sales_Data_Id__c</columns>
    <columns>Orders__c</columns>
    <columns>prior_period_commish_GTM__c</columns>
    <columns>Prior_Persod_Sales__c</columns>
    <columns>Rolling_12_Mth_Sales__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Data</label>
    <language>en_US</language>
</ListView>