force-app/main/default/objects/Sales_Data__c/listViews/Sales_Data_Current_Fiscal_Year.listView-meta.xml
<ListView>
    <fullName>Sales_Data_Current_Fiscal_Year</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Sales__c</columns>
    <columns>Rolling_12_Mth_Sales__c</columns>
    <columns>Prior_Persod_Sales__c</columns>
    <columns>Commission_GTM__c</columns>
    <columns>Rolling_12_Mth_GTM__c</columns>
    <columns>prior_period_commish_GTM__c</columns>
    <columns>Orders__c</columns>
    <columns>Prior_Period_Distinct_Orders__c</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <columns>CONNECTION_RECEIVED.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2016</value>
    </filters>
    <label>Sales Data: Current Fiscal Year</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>